add_executable(
    fixed_base_joint_space_cost_test
    fixed_base_joint_space_cost_test.cpp
    ${IDOCP_SRC_DIR}/robot/robot.cpp
    ${IDOCP_SRC_DIR}/robot/point_contact.cpp
    ${IDOCP_SRC_DIR}/robot/floating_base.cpp
    ${IDOCP_SRC_DIR}/cost/joint_space_cost.cpp
)
target_include_directories(
    fixed_base_joint_space_cost_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    fixed_base_joint_space_cost_test
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    ${Boost_LIBRARIES}
    ${PINOCCHIO_LIBRARIES}
    urdfdom_model
)
add_dependencies(
    fixed_base_joint_space_cost_test
    googletest
)
add_test(
    NAME fixed_base_joint_space_cost_test
    COMMAND $<TARGET_FILE:fixed_base_joint_space_cost_test>
)


add_executable(
    floating_base_joint_space_cost_test
    floating_base_joint_space_cost_test.cpp
    ${IDOCP_SRC_DIR}/robot/robot.cpp
    ${IDOCP_SRC_DIR}/robot/point_contact.cpp
    ${IDOCP_SRC_DIR}/robot/floating_base.cpp
    ${IDOCP_SRC_DIR}/cost/joint_space_cost.cpp
)
target_include_directories(
    floating_base_joint_space_cost_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    floating_base_joint_space_cost_test
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    ${Boost_LIBRARIES}
    ${PINOCCHIO_LIBRARIES}
    urdfdom_model
)
add_dependencies(
    floating_base_joint_space_cost_test
    googletest
)
add_test(
    NAME floating_base_joint_space_cost_test 
    COMMAND $<TARGET_FILE:floating_base_joint_space_cost_test>
)


add_executable(
    fixed_base_contact_cost_test
    fixed_base_contact_cost_test.cpp
    ${IDOCP_SRC_DIR}/robot/robot.cpp
    ${IDOCP_SRC_DIR}/robot/point_contact.cpp
    ${IDOCP_SRC_DIR}/robot/floating_base.cpp
    ${IDOCP_SRC_DIR}/cost/contact_cost.cpp
)
target_include_directories(
    fixed_base_contact_cost_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    fixed_base_contact_cost_test
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    ${Boost_LIBRARIES}
    ${PINOCCHIO_LIBRARIES}
    urdfdom_model
)
add_dependencies(
    fixed_base_contact_cost_test
    googletest
)
add_test(
    NAME fixed_base_contact_cost_test
    COMMAND $<TARGET_FILE:fixed_base_contact_cost_test>
)


add_executable(
    floating_base_contact_cost_test
    floating_base_contact_cost_test.cpp
    ${IDOCP_SRC_DIR}/robot/robot.cpp
    ${IDOCP_SRC_DIR}/robot/point_contact.cpp
    ${IDOCP_SRC_DIR}/robot/floating_base.cpp
    ${IDOCP_SRC_DIR}/cost/contact_cost.cpp
)
target_include_directories(
    floating_base_contact_cost_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    floating_base_contact_cost_test
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    ${Boost_LIBRARIES}
    ${PINOCCHIO_LIBRARIES}
    urdfdom_model
)
add_dependencies(
    floating_base_contact_cost_test
    googletest
)
add_test(
    NAME floating_base_contact_cost_test
    COMMAND $<TARGET_FILE:floating_base_contact_cost_test>
)
