set(IDOCP_PYTHON_VERSION ${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR})
set(IDOCP_SIM_PYTHON_LIBDIR ${CMAKE_INSTALL_LIBDIR}/python${IDOCP_PYTHON_VERSION}/site-packages/idocp_sim)

file(GLOB SIM_PYTHON_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.py)
install(
  FILES ${SIM_PYTHON_FILES} 
  DESTINATION ${IDOCP_SIM_PYTHON_LIBDIR}/
)