set(ROBOTOC_PYTHON_VERSION ${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR})
set(ROBOTOC_SIM_PYTHON_LIBDIR ${CMAKE_INSTALL_LIBDIR}/python${ROBOTOC_PYTHON_VERSION}/site-packages/robotoc_sim)

file(GLOB SIM_PYTHON_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.py)
install(
  FILES ${SIM_PYTHON_FILES} 
  DESTINATION ${ROBOTOC_SIM_PYTHON_LIBDIR}/
)