add_executable(
    fixed_base_point_contact_test
    fixed_base_point_contact_test.cpp
    ${IDOCP_SRC_DIR}/robot/point_contact.cpp
)
target_include_directories(
    fixed_base_point_contact_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    fixed_base_point_contact_test
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    ${Boost_LIBRARIES}
    ${PINOCCHIO_LIBRARIES}
    urdfdom_model
)
add_dependencies(
    fixed_base_point_contact_test
    googletest
)
add_test(
    NAME fixed_base_point_contact_test
    COMMAND $<TARGET_FILE:fixed_base_point_contact_test>
)

add_executable(
    fixed_base_floating_base_test
    fixed_base_floating_base_test.cpp
    ${IDOCP_SRC_DIR}/robot/floating_base.cpp
)
target_include_directories(
    fixed_base_floating_base_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    fixed_base_floating_base_test
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    ${Boost_LIBRARIES}
    ${PINOCCHIO_LIBRARIES}
    urdfdom_model
)
add_dependencies(
    fixed_base_floating_base_test
    googletest
)
add_test(
    NAME fixed_base_floating_base_test
    COMMAND $<TARGET_FILE:fixed_base_floating_base_test>
)


add_executable(
    fixed_base_robot_test 
    fixed_base_robot_test.cpp
    ${IDOCP_SRC_DIR}/robot/robot.cpp
    ${IDOCP_SRC_DIR}/robot/point_contact.cpp
    ${IDOCP_SRC_DIR}/robot/floating_base.cpp
)
target_include_directories(
    fixed_base_robot_test 
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${Boost_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    fixed_base_robot_test 
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    ${Boost_LIBRARIES}
    ${PINOCCHIO_LIBRARIES}
    urdfdom_model
)
add_dependencies(
    fixed_base_robot_test 
    googletest
)
add_test(
    NAME fixed_base_robot_test
    COMMAND $<TARGET_FILE:fixed_base_robot_test>
)