add_executable(
    fixed_base_point_contact_test
    fixed_base_point_contact_test.cpp
)
target_include_directories(
    fixed_base_point_contact_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    fixed_base_point_contact_test
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    idocp_robot
)
add_dependencies(
    fixed_base_point_contact_test
    googletest
)
add_test(
    NAME fixed_base_point_contact_test
    COMMAND $<TARGET_FILE:fixed_base_point_contact_test>
)

add_executable(
    fixed_base_floating_base_test
    fixed_base_floating_base_test.cpp
)
target_include_directories(
    fixed_base_floating_base_test
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    fixed_base_floating_base_test
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    idocp_robot
)
add_dependencies(
    fixed_base_floating_base_test
    googletest
)
add_test(
    NAME fixed_base_floating_base_test
    COMMAND $<TARGET_FILE:fixed_base_floating_base_test>
)

add_executable(
    fixed_base_robot_test 
    fixed_base_robot_test.cpp
)
target_include_directories(
    fixed_base_robot_test 
    PRIVATE
    ${GTEST_INCLUDE_PATH}
    ${GMOCK_INCLUDE_PATH}
    ${GTEST_LIBRARY_PATH}
    ${IDOCP_INCLUDE_DIR}
    ${PINOCCHIO_INCLUDE_DIRS}
)
target_link_libraries(
    fixed_base_robot_test 
    PRIVATE
    pthread
    GTest::GTest
    GTest::GMock
    idocp_robot
)
add_dependencies(
    fixed_base_robot_test 
    googletest
)
add_test(
    NAME fixed_base_robot_test
    COMMAND $<TARGET_FILE:fixed_base_robot_test>
)